--- a/page3.html
+++ b/page3.html
@@ -98,7 +98,7 @@
     </div>
 
 
-    <form action="https://b49a7ed1-7d67-4b53-b36f-f3369affb73b-ide.cs50.xyz:8080/index.html" align="left">
+    <form action="index.html" align="left">
         <button type="submit">Back to Homepage</button>
     </form>
     <script src="script.js"></script>
