--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <li>Part II. How Political Conflict Affects and Changes Medical Practice</li>
                     <li>Part III.  Today’s Need for Physicians to Become Politically Aware Starts with You</li>
                 </ul>
-                <form action="page1.html">
+                <form action="rambroise.github.io/page1.html">
                     <button type="submit">Onto Part I</button>
                 </form>
             </body>
