--- a/page1.html
+++ b/page1.html
@@ -216,7 +216,7 @@
                         medical personnel can actually be working towards obscured motives that can ultimately harm the health of the population
                         they intended to serve. In this way, it is necessary that medical practitioners be politically engaged and use their voices as citizens to call-out their governments for such exploitations and corruptions of medicine.</li>
                         <p></p>
-                        <form action="page2.html">
+                        <form action="https://rambroise.github.io/page2.html">
                             <button type="submit">Continue Onto Part II</button>
                         </form>
                     </ol></left>
@@ -224,7 +224,7 @@
             </body>
         </div>
     </div>
-    <form action="index.html" align="left">
+    <form action="https://rambroise.github.io/" align="left">
         <button type="submit">Back to Homepage</button>
     </form>
     <script src="script.js"></script>
