--- a/page2.html
+++ b/page2.html
@@ -228,7 +228,7 @@
                         <p>The long-standing history of how political discourse as affected medicine and continues to influence physicians’
                         decisions when administering care verifies that physicians cannot practice medicine in a vacuum. Rather, physicians
                         are going to be influenced by the political environment around them.</p>
-                        <form action="page3.html">
+                        <form action="https://rambroise.github.io/page3.html">
                             <button type="submit">Continue Onto Part III</button>
                         </form>
                     </div></center>
@@ -236,7 +236,7 @@
             </body>
     </div>
     </div>
-    <form action="index.html" align="left">
+    <form action="https://rambroise.github.io/" align="left">
         <button type="submit">Back to Homepage</button>
     </form>
     <script src="script.js"></script>
