--- a/page3.html
+++ b/page3.html
@@ -98,7 +98,7 @@
     </div>
 
 
-    <form action="index.html" align="left">
+    <form action="https://rambroise.github.io/" align="left">
         <button type="submit">Back to Homepage</button>
     </form>
     <script src="script.js"></script>
